--- a/proj_duanyou/src/main/res/layout/activity_report.xml
+++ b/proj_duanyou/src/main/res/layout/activity_report.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.duanyou.lavimao.proj_duanyou.activity.ReportActivity">
 
-    <include layout="@layout/common_title"/>
+    <include layout="@layout/common_title" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/report_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp" />
+
+    <EditText
+        android:id="@+id/report_et"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/yellow_5dp_bg"
+        android:gravity="start" />
 
 </LinearLayout>
