新增个人资料页面

--- a/proj_duanyou/src/main/res/layout/common_title.xml
+++ b/proj_duanyou/src/main/res/layout/common_title.xml
@@ -61,6 +61,14 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="5dp"
                 android:scaleType="fitXY" />
+
+            <TextView
+                android:id="@+id/right_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                tools:text="right" />
         </LinearLayout>
 
     </RelativeLayout>
