--- a/proj_duanyou/src/main/res/layout/item_report.xml
+++ b/proj_duanyou/src/main/res/layout/item_report.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/report_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:id="@+id/report_ll"
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
@@ -12,7 +12,7 @@
         android:id="@+id/select_iv"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/unselect" />
 
     <TextView
         android:id="@+id/content_tv"
