--- a/proj_duanyou/src/main/res/layout/activity_person_info.xml
+++ b/proj_duanyou/src/main/res/layout/activity_person_info.xml
@@ -87,13 +87,16 @@
 
         <EditText
             android:id="@+id/nickname_et"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="44dp"
             android:layout_alignParentRight="true"
             android:background="@color/white"
             android:textColor="@color/black2"
-            android:gravity="center"
-            tools:text="nicheng" />
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:inputType="text"
+            android:gravity="right|center_vertical"
+            tools:text="nichengaaaaaaaa" />
 
         <TextView
             android:layout_width="match_parent"
@@ -204,7 +207,7 @@
             android:text="工作" />
 
         <EditText
-            android:id="@+id/work_tv"
+            android:id="@+id/work_et"
             android:layout_width="200dp"
             android:layout_height="44dp"
             android:layout_alignParentRight="true"
@@ -212,6 +215,7 @@
             android:gravity="right|center_vertical"
             android:inputType="text"
             android:maxLines="1"
+
             android:textColor="@color/black2"
             android:textSize="15sp"
             tools:text="6465465sdfsdf" />
@@ -219,7 +223,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_below="@+id/work_tv"
+            android:layout_below="@+id/work_et"
             android:background="@color/gray" />
     </RelativeLayout>
 
