--- a/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
+++ b/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
@@ -148,6 +148,7 @@
 
         <!--分享-->
         <ImageView
+           android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
