--- a/proj_duanyou/src/main/res/layout/fragment_check.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_check.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/bg_co"
     android:orientation="vertical">
 
@@ -40,7 +40,6 @@
 
             <TextView
                 android:id="@+id/nav_title"
-                tools:text="title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -49,7 +48,8 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:text="title" />
 
             <LinearLayout
                 android:id="@+id/nav_right"
@@ -72,16 +72,95 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
-        android:id="@+id/refreshlayout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <fr.castorflex.android.verticalviewpager.VerticalViewPager
-            android:id="@+id/verticalviewpager"
+      <!--  <com.duanyou.lavimao.proj_duanyou.widgets.MyTwinklingRefreshLayout
+            android:id="@+id/refreshlayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+-->
+            <fr.castorflex.android.verticalviewpager.VerticalViewPager
+                android:id="@+id/vertical_vp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+      <!--  </com.duanyou.lavimao.proj_duanyou.widgets.MyTwinklingRefreshLayout>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+            <!--踩-->
+            <FrameLayout
+                android:id="@+id/cai_ll"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/oval_white"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/fuck1" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:text="踩"
+                        android:textSize="13sp" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+            <!--赞-->
+            <FrameLayout
+                android:id="@+id/zan_ll"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/oval_white"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/good1" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:text="赞"
+                        android:textSize="13sp" />
+
+                </LinearLayout>
+
+            </FrameLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
