--- a/proj_duanyou/src/main/res/layout/activity_find_pwd.xml
+++ b/proj_duanyou/src/main/res/layout/activity_find_pwd.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="25dp"
-            android:text="输入你的手机号，创建新账户"
+            android:text="我们将发送验证码到您的手机号上"
             android:textColor="@color/white" />
 
         <EditText
@@ -58,10 +58,10 @@
                 android:textColor="@color/white" />
 
             <CheckBox
+                android:checked="true"
                 android:id="@+id/read_cb"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:checked="true"
                 android:layout_alignBottom="@+id/read_tv"
                 android:layout_toLeftOf="@+id/read_tv"
                 android:button="@drawable/checkbox_bg"
