--- a/proj_duanyou/src/main/res/layout/activity_login.xml
+++ b/proj_duanyou/src/main/res/layout/activity_login.xml
@@ -22,8 +22,8 @@
             android:layout_height="90dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            app:riv_corner_radius="6dp"
-            android:src="@drawable/head42x" />
+            android:src="@drawable/head42x"
+            app:riv_corner_radius="6dp" />
     </RelativeLayout>
 
     <TextView
@@ -31,8 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
-        android:textColor="@color/login_color1"
-        android:text="请先登录，亲~~" />
+        android:text="请先登录，亲~~"
+        android:textColor="@color/login_color1" />
 
     <EditText
         android:id="@+id/account_et"
@@ -43,9 +43,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
+        android:hint="这里输入段友号或手机号噢！~ ~"
         android:inputType="numberDecimal"
         android:textColorHint="@color/login_color2"
-        android:hint="这里输入段友号或手机号噢！~ ~"
         android:textSize="14sp" />
 
     <EditText
@@ -57,8 +57,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/rectangle"
         android:gravity="center"
-        android:inputType="textPassword"
         android:hint="密码在这里哈！~ ~"
+        android:inputType="textPassword"
         android:textColorHint="@color/login_color2"
         android:textSize="14sp" />
 
@@ -82,7 +82,7 @@
         android:orientation="horizontal">
 
         <TextView
-
+            android:id="@+id/forget_pwd_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="密码忘了？" />
@@ -109,15 +109,16 @@
             android:background="@drawable/qq2" />
 
         <TextView
-            
+
             android:layout_width="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/qq_iv"
             android:layout_alignRight="@+id/qq_iv"
-            android:gravity="center"
             android:layout_below="@+id/qq_iv"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
             android:text="QQ登录" />
+
         <ImageView
             android:id="@+id/weixin_iv"
             android:layout_width="wrap_content"
@@ -127,12 +128,12 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/weixin_iv"
             android:layout_alignRight="@+id/weixin_iv"
-            android:gravity="center"
             android:layout_below="@+id/weixin_iv"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
             android:text="微信登录" />
 
     </RelativeLayout>
