--- a/proj_duanyou/src/main/res/layout/fragment_check.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_check.xml
@@ -76,18 +76,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-      <!--  <com.duanyou.lavimao.proj_duanyou.widgets.MyTwinklingRefreshLayout
-            android:id="@+id/refreshlayout"
+        <!-- <com.duanyou.lavimao.proj_duanyou.widgets.MyTwinklingRefreshLayout
+               android:id="@+id/refreshlayout"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">-->
+
+        <com.duanyou.lavimao.proj_duanyou.widgets.MyViewPager
+            android:id="@+id/vertical_vp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
--->
-            <fr.castorflex.android.verticalviewpager.VerticalViewPager
-                android:id="@+id/vertical_vp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+            android:layout_height="match_parent" />
 
-      <!--  </com.duanyou.lavimao.proj_duanyou.widgets.MyTwinklingRefreshLayout>-->
+        <!--</com.duanyou.lavimao.proj_duanyou.widgets.MyTwinklingRefreshLayout>-->
 
+        <ProgressBar
+            android:id="@+id/pb"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true" />
+
+        <TextView
+            android:id="@+id/load_again_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:padding="20dp"
+            android:text="点击重新加载"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
+        <!--底部的赞和踩-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
