--- a/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
+++ b/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
@@ -166,6 +166,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="14dp"
+                        android:scaleType="centerInside"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
                         android:src="@drawable/icon_share" />
 
                 </LinearLayout>
