--- a/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
+++ b/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
@@ -156,7 +156,8 @@
 
         <!--分享-->
         <ImageView
-           android:visibility="gone"
+           android:visibility="visible"
+            android:id="@+id/share_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
