--- a/proj_duanyou/src/main/res/layout/fragment_check_item.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_check_item.xml
@@ -36,6 +36,7 @@
         android:background="@color/white">
 
         <LinearLayout
+            android:id="@+id/report_ll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
