默认图片处理

--- a/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
+++ b/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
@@ -76,7 +76,8 @@
                         <ImageView
                             android:id="@+id/content_iv"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:scaleType="centerCrop" />
 
                     </FrameLayout>
                 </LinearLayout>
@@ -166,9 +167,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="14dp"
-                        android:scaleType="centerInside"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
+                        android:scaleType="centerInside"
                         android:src="@drawable/icon_share" />
 
                 </LinearLayout>
