--- a/proj_duanyou/src/main/res/layout/activity_register.xml
+++ b/proj_duanyou/src/main/res/layout/activity_register.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/bg_color"
     android:orientation="vertical"
-    android:padding="30dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
     tools:context=".activity.MainActivity">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -18,14 +20,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/icon_logo" />
+            android:scaleType="centerInside"
+            android:src="@drawable/duanyou22x" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginTop="25dp"
             android:text="输入你的手机号，创建新账户"
             android:textColor="@color/white" />
 
