--- a/proj_duanyou/src/main/res/layout/activity_setting_pwd.xml
+++ b/proj_duanyou/src/main/res/layout/activity_setting_pwd.xml
@@ -6,22 +6,24 @@
     android:layout_height="match_parent"
     android:background="@color/bg_color"
     android:orientation="vertical"
-    android:padding="30dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
     tools:context=".activity.MainActivity">
+
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/icon_logo" />
+        android:scaleType="centerInside"
+        android:src="@drawable/duanyou22x" />
 
     <TextView
+        android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="25dp"
-        android:text="设置您的新密码"
+        android:text="设置您的密码"
         android:textColor="@color/white" />
 
     <EditText
