--- a/proj_duanyou/src/main/res/layout/activity_person_info.xml
+++ b/proj_duanyou/src/main/res/layout/activity_person_info.xml
@@ -9,10 +9,7 @@
 
     <include
         android:id="@+id/title"
-        layout="@layout/common_title"
-
-
-        />
+        layout="@layout/common_title" />
 
     <RelativeLayout
         android:id="@+id/headimage_rl"
