新增更改密码功能

--- a/proj_duanyou/src/main/res/layout/activity_register_success.xml
+++ b/proj_duanyou/src/main/res/layout/activity_register_success.xml
@@ -17,6 +17,7 @@
         android:src="@drawable/content_register_step62x" />
 
     <TextView
+        android:id="@+id/content_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
