--- a/proj_duanyou/src/main/res/layout/fragment_mine.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_mine.xml
@@ -88,12 +88,13 @@
             android:layout_marginTop="20dp"
             android:background="@color/white"
             android:paddingBottom="5dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:paddingEnd="30dp"
             android:paddingLeft="30dp"
             android:paddingTop="10dp">
 
             <TextView
+                android:id="@+id/nearby_duanyou_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="5dp"
@@ -101,6 +102,7 @@
                 android:text="附近段友" />
 
             <TextView
+                android:id="@+id/duanyou_circle_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -109,6 +111,7 @@
                 android:text="段友圈" />
 
             <TextView
+                android:id="@+id/follow_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
