--- a/proj_duanyou/src/main/res/layout/activity_upload_duanzi.xml
+++ b/proj_duanyou/src/main/res/layout/activity_upload_duanzi.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,16 +10,16 @@
         android:id="@+id/title"
         layout="@layout/common_title" />
 
-
     <EditText
         android:id="@+id/content_et"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_ll"
         android:layout_below="@+id/title"
         android:background="@null"
         android:gravity="start"
         android:hint="请在此输入您的段子文稿"
+        android:maxEms="500"
         android:padding="10dp"
         android:textColor="@color/gray"
         android:textSize="14sp" />
@@ -33,16 +32,46 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/num_tv"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:text="还可以输入500字哟！"
-            android:textColor="@color/gray"
-            android:textSize="14sp" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:id="@+id/pre_show_rl"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="invisible">
+
+                <ImageView
+                    android:id="@+id/pre_show_iv"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
+                    tools:src="@drawable/default_pic" />
+
+                <ImageView
+                    android:id="@+id/delete_iv"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginLeft="80dp"
+                    android:src="@drawable/delete" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/num_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="end"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:text="还可以输入500字哟！"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
+        </LinearLayout>
 
         <View
 
