--- a/proj_duanyou/src/main/res/layout/fragment_tag.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_tag.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
+            android:overScrollMode="never"
             android:scrollbars="none" />
 
     </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
