--- a/proj_duanyou/src/main/res/layout/activity_people_info.xml
+++ b/proj_duanyou/src/main/res/layout/activity_people_info.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray2"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="55dp"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -16,13 +20,13 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="290dp">
+                android:layout_height="240dp">
 
 
                 <ImageView
                     android:id="@+id/bg_iv"
                     android:layout_width="match_parent"
-                    android:layout_height="230dp"
+                    android:layout_height="190dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/background2x" />
 
@@ -63,6 +67,7 @@
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/fansnum_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -73,6 +78,7 @@
                     android:text="粉丝：1" />
 
                 <TextView
+                    android:id="@+id/integral_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/bg_iv"
@@ -86,7 +92,41 @@
             </RelativeLayout>
 
 
-            <include layout="@layout/common_title" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <RelativeLayout
+                    android:id="@+id/nav_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true">
+
+                    <ImageView
+                        android:id="@+id/iv_left"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:src="@drawable/black_back" />
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/nav_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginRight="60dp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    tools:text="title" />
+
+
+            </RelativeLayout>
 
 
         </RelativeLayout>
@@ -99,4 +139,35 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/follow_tv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="关注"
+            android:textColor="@color/black2" />
+
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/gray2" />
+
+        <TextView
+            android:id="@+id/add_friend_tv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="加为好友"
+            android:textColor="@color/black2" />
+    </LinearLayout>
+
+</RelativeLayout>
